# nol8-validation

./: .env.example  .gitignore  KNOWN_BEHAVIORS.md  README.md  pyproject.toml
.claude/: settings.json
config/: demo.env
demos/: README.md  check-engines.sh
docs/: CLEANUP_PLAN.md  CODE_REVIEW_PLAN.md  ENGINE-ACCESS-REQUEST.md  FINDINGS.md  README.md  TROUBLESHOOTING.md  USE_CASES.md  continue-conversation.md
nol8_validation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
samples/: customer-record.txt  e75e21ea_data_1000.txt  e75e21ea_data_10000.txt  e75e21ea_data_12000.txt  e75e21ea_data_12050.txt  e75e21ea_data_12051.txt  e75e21ea_data_12052.txt  e75e21ea_data_12055.txt  e75e21ea_data_12060.txt  e75e21ea_data_12099.txt  e75e21ea_data_12100.txt  e75e21ea_data_12500.txt  e75e21ea_data_13000.txt  e75e21ea_data_14000.txt  e75e21ea_data_15000.txt  e75e21ea_data_20000.txt  e75e21ea_policy_5.txt
scripts/: load-policy.sh  process-message.sh  repro-issue-003-curl.sh  repro-issue-003.py  repro-issue-004-curl.sh  repro-issue-004.py  restructure-framework.sh  run-validation.sh
tests/: test_cli_io_helpers.py  test_customer_record_csv.py  test_end_to_end_pipeline.py  test_generation_determinism.py  test_literal_matching.py  test_non_overlapping_catalog.py  test_policy_file_deployment.py  test_policy_overlap.py  test_replacement_token_distinctness.py  test_report_failure_grouping.py  test_run_argument_resolution.py  test_support_ticket_scenario.py  test_tier0_silent_success.py  test_transport_scripts.py  test_validate_compare.py  test_validate_generate.py  (+5 more)
(+204 files in other folders)
