[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nol8-validation"
version = "0.1.0"
description = "Nol8 Validation Framework"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "PyYAML",
]

[project.scripts]
validate = "framework.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["framework*"]